Update packages to their latest versions in pnpm-lock.yaml
The packages related to Astro.js, Preact, React, and other dependencies were updated to their later versions. In addition, the 'prettier-plugin-astro' was added to the devDependencies. The updates improve software compatibility and resolve potential vulnerabilities.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ShortIntro from '@components/home/ShortIntro.astro'
 import Skills from '@components/home/Skills.astro'
 
 const title = 'Kalyan Jyoti Borah'
-const description = "The home of Kalyan Jyoti Borah's Portfolio"
+const description = "The Homepage of Kalyan Jyoti Borah's Portfolio"
 const permalink = ''
 const ograph = ''
 ---
@@ -15,7 +15,7 @@ const ograph = ''
       class="h-[calc(100dvh-4.75rem)] grid items-center justify-center w-[80%] m-auto pt-[4.75rem]"
     >
       <h1
-        class="flex flex-col my-24 md:m-auto w-full justify-center text-left font-intro text-4xl shadow-slate-500 font-bold md:text-6xl"
+        class="z-[80] flex flex-col my-24 md:m-auto w-full justify-center text-left font-intro text-4xl shadow-slate-500 font-bold md:text-6xl"
       >
         <span
           class="text-left text-gray-100 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]"
