--- a/src/components/common/BaseHead.astro
+++ b/src/components/common/BaseHead.astro
@@ -56,6 +56,13 @@ const { title, description, permalink, canonicalUrl, ograph } = Astro.props
     href="https://fonts.googleapis.com/css2?family=Alata&family=Inconsolata:wght@200;300;400&display=swap"
     rel="stylesheet"
   />
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "hkt70dc655");
+    </script>
 </head>
 
 <style is:global>
