--- a/src/components/home/ShortIntro.astro
+++ b/src/components/home/ShortIntro.astro
@@ -10,10 +10,10 @@
       <h2
         class="flex flex-col text-left text-gray-200 font-intro font-bold md:pb-4 text-2xl md:text-3xl"
       >
-        <div>
+        <span>
           <span id="wave">👋</span>{' '}
           <span id="greet">Hello, World</span>
-        </div>
+        </span>
         <span
           class="bg-[linear-gradient(rgba(112,112,112,100%),rgba(229,229,229,100%))] bg-clip-text text-transparent"
         >
